crates/aion-awl/tests/fixtures/rev2/schema-doors/invalid/import_patternprops.awl
//! The imported contract uses patternProperties; the checker must refuse and name the keyword.
workflow import_patternprops
  input thing: Thing
  outcome done: type Done, route success

type Thing = schema("patternprops.schema.json")

type Done { note: String }

worker doors
  action wrap_up(thing: Thing) -> Done

step wrap
  thing |> wrap_up |> route done
